# GPU-learning

./: .gitignore  README.md  content  dev.sh  flake.nix  jupyter-config.py  nginx.conf  rebuild-notebooks.sh  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8lbz2f4436wsy6rms1jhc5s2dwp9qggy-source  rk8wiwkq56hz0jfaza9h9rdijlv1npmd-source
book/: mkdocs.yml
book/docs/: directives.md  error-handling.md  exploiting-parallelism.md  further-reading.md  getting-started.md  index.md  latency-hiding.md  mandelbrot-sequential-implementation.md  memory-coalescing.md  memory-management.md  memory.md  native.md  overlapping.md  shared-memory.md
book/site/: 404.html  SUMMARY.md.bak
conversion_todo/03_memory_management/: README-openacc-cpp.md  README-openacc-fortran.md
conversion_todo/04_exploiting_parallelism/: README.md
cuda/01_getting_started/: README.md  mandelbrot.cpp  mandelbrot.ipynb  mandelbrot_gpuonly.cu  mandelbrot_lesstransfer.cu  mandelbrot_naive.cu
cuda/02_memory_coalescing/: matrixaddition.cu  matrixadditionoptimized.cu
cuda/03_shared_memory/: README.md  matrixprint.h  matrixtranspose.cu  matrixtransposedynamicsharedmem.cu  matrixtransposesharedmem.cu
include/: bmp.h  timer.h
mdbook/: book.toml
mdbook/src/: SUMMARY.md  (+10 more)
nginx/: dev.conf  docker.conf  nginx.conf  proxy.conf
nix/: mdbook-classy.nix
read-bmp-rs/: .gitignore  Cargo.toml  bmp.cpp
source-to-notebook/: Cargo.toml
source-to-notebook/src/: known_formats.rs  main.rs  schema.rs
(+186 files in other folders)
